save before fp16 bug

--- a/notebooks/datatest.ipynb
+++ b/notebooks/datatest.ipynb
@@ -15,6 +15,44 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "37f1913b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 4, 8]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "idxs = list(range(0, 8 + 1, 4))\n",
+    "idxs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b76f0bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f82f190f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "c481efe6",
    "metadata": {},
    "outputs": [],
